<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference 
        android:defaultValue="true" 
        android:title="@string/prefs_show_freqbar" 
        android:key="prefs_key_show_freqbar" 
        android:summary="@string/prefs_summary_show_freqbar"/>
    
    <CheckBoxPreference 
        android:defaultValue="true" 
        android:title="@string/prefs_show_freq" 
        android:key="prefs_key_show_freq" 
        android:summary="@string/prefs_summary_show_freq"/>
    
    <CheckBoxPreference 
        android:summary="@string/prefs_summary_show_mic_level" 
        android:title="@string/prefs_show_mic_level" 
        android:key="prefs_key_show_mic_level" 
        android:defaultValue="false"/>
        
</PreferenceScreen>
